# clang-quiz

./: CMakeLists.txt  README.md  main.c  quizzes.json.gpg
